resolving some issues with cmake

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,13 +4,17 @@
 
 [submodule "ramulator"]
     path = ramulator
-    url = https://github.com/CMU-SAFARI/ramulator
+    url = https://github.com/AlexMontgomerie/ramulator
 
 [submodule "DRAMPower"]
     path = DRAMPower
-    url = https://github.com/tukl-msd/DRAMPower
+    url = https://github.com/AlexMontgomerie/DRAMPower
 
 [submodule "HighFive"]
     path = HighFive
     url = https://github.com/BlueBrain/HighFive
+
+[submodule "SCALE-Sim"]
+    path = SCALE-Sim
+    url = https://github.com/ARM-software/SCALE-Sim
 
